--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html data-theme="light">
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Hans College of Pharmacy,Rajasthan, India"
-    />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Hans College of Pharmacy.</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Hans College of Pharmacy,Rajasthan, India" />
+  <meta name="keywords"
+    content="Hans College of Pharmacy, Pharmacy Education, Pharmaceutical Research, Rajasthan, India, Pharmacy Courses, Bachelor of Pharmacy, Master of Pharmacy, Pharmacy Degree Programs, Pharmaceutical Sciences, Healthcare, Pharmacy Campus, Academic Excellence, Research Opportunities">
+  <meta name="author" content="Hans College of Pharmacy">
+  <meta name="og:title" content="Hans College of Pharmacy, Rajasthan, India">
+  <meta name="og:description"
+    content="Explore the excellence in pharmaceutical education and research at Hans College of Pharmacy in Rajasthan, India. Join us for transformative learning in pharmacy.">
+  <meta name="og:type" content="education">
+  <meta name="og:url" content="https://www.hanscollegeofpharmacy.org/">
+  
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Hans College of Pharmacy.</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
